# quantik-core-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benchmarks/: positions-v1.json
bfs_checkpoints/: frontier_depth_1.txt  frontier_depth_2.txt  frontier_depth_3.txt  frontier_depth_4.txt  frontier_depth_5.txt  meta.txt  seen_depth_1.txt  seen_depth_2.txt  seen_depth_3.txt  seen_depth_4.txt
crates/quantik-core/: Cargo.toml  README.md
crates/quantik-core/examples/: depth4_survey.rs  depth_sweep.rs  search_summary_export.rs  selfplay_export.rs
crates/quantik-core/src/: beam_search.rs  bitboard.rs  board.rs  constants.rs  evaluation.rs  game.rs  lib.rs  mcts.rs  minimax.rs  moves.rs  opening_book.rs  qfen.rs  search_telemetry.rs  state.rs  symmetry.rs
crates/quantik-core/src/bench/: adapters.rs  agreement.rs  book_export.rs  bundle.rs  canonical.rs  checkpoint.rs  contracts.rs  correctness.rs  dataset.rs  head_to_head.rs  metrics.rs  mod.rs  portability.rs  reference.rs  report.rs  stability.rs
crates/quantik-core/tests/: portability_report.rs  script_tools.rs
crates/quantik-core/tests/fixtures/: model-checkpoint-v1.json  selfplay-v1-rust-smoke.jsonl
docs/: BENCHMARKS.md  search-telemetry.md
docs/benchmarks/: depth4-canonical-solve-cost-2026-07-13.md  depth4-canonical-survey-findings-2026-07-13.md  quantik-game-tree-census-2026-07-13.md  rust-vs-python-insights-2026-07-12.md
docs/superpowers/plans/: 2026-07-12-cross-engine-benchmark-port.md  2026-07-13-crates-io-packaging-and-ml-data-pipeline.md  2026-07-13-opening-book-engine-integration-contracts.md  2026-07-16-search-telemetry.md
docs/superpowers/reference/beam-search-py/: BEAM_SEARCH.md  beam_search.py  design-spec.md  test_beam_search.py
docs/superpowers/specs/: 2026-07-07-beam-search-rust-design.md  2026-07-16-search-telemetry-design.md
scripts/: README.md  export_contract_rows.sh  generate_h2h_stats.sh  generate_observations.sh  generate_opening_book.sh  generate_positions.sh  inspect_opening_book.sh  plan_runs.sh
scripts/lib/: bench_common.sh
