[package]
name = "quantik-core"
version = "0.1.0"
edition = "2021"
description = "High-performance Quantik board game engine"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
