[package]
name = "quantik-core"
version = "0.1.0"
edition = "2021"
description = "High-performance Quantik board game engine: bitboard state, QFEN notation, canonical symmetry-reduced keys, and minimax/MCTS/beam-search engines. Rust companion to the Python quantik-core package."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mberlanda/quantik-core-rust"
homepage = "https://github.com/mberlanda/quantik-core-rust"
documentation = "https://docs.rs/quantik-core"
keywords = ["quantik", "board-games", "mcts", "bitboards", "game-ai"]
categories = ["game-development", "algorithms"]
authors = ["Mauro Berlanda <mauro.berlanda@gmail.com>"]

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rand = "0.8"
rayon = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
